@@ -1,3 +1,12 @@
+2007-02-27 Jens Tkotz <jens@peino.de> 1.5.6-svn-b16
+ 
+ * Fix: Form intro now works with IDs in hidden fields.
+        This fixes broken HTML/Javascript for tabs.
+
+ * Fix: Little HTML entity "bug" in includes/definitions/albumProperties.php
+ 
+ * Fix: Little HTML bug in view_album.php
+ 
 2007-02-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b15
 
  * Fix: Missing } in css/screen.css.default
